Work on tailwind config

--- a/app/view/inc/footer.phtml
+++ b/app/view/inc/footer.phtml
@@ -1,5 +1,5 @@
-<div class="block text-center">
+<footer class="bg-blue-500 text-center">
     Copyright &copy; 2009-<?=date('Y'); ?> NOLA Interactive, LLC. All Rights Reserved.
-</div>
+</footer>
 </body>
 </html>
