--- a/app/view/inc/footer.phtml
+++ b/app/view/inc/footer.phtml
@@ -1,2 +1,6 @@
+        </div>
+    </div>
+    <script type="text/javascript" src="/assets/js/highlight.min.js"></script>
+    <script src="/assets/js/app.min.js"></script>
 </body>
 </html>
