--- a/app/view/inc/header.phtml
+++ b/app/view/inc/header.phtml
@@ -17,7 +17,18 @@
 
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
     <link rel="stylesheet" href="/assets/css/app.min.css">
+    <link rel="stylesheet" href="/assets/css/atom-one-dark.min.css">
     <link type="image/png" rel="shortcut icon" href="/assets/img/pop-php-icon.png" />
 
 </head>
 <body>
+    <div class="flex flex-col h-screen">
+        <header class="sticky top-0 z-40 w-full p-4 h-16 flex-none bg-white border border-solid border-b border-b-gray-300">
+            <a class="nav-icon hidden float-right p-1 border border-solid border-gray-200 rounded-md" href="#" onclick="toggleSidebar('#sidebar'); return false;">
+                <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+                </svg>
+            </a>
+            <h1><?=$title; ?></h1>
+        </header>
+        <div class="flex flex-1 overflow-hidden">
