--- a/app/view/inc/footer.phtml
+++ b/app/view/inc/footer.phtml
@@ -1,3 +1,8 @@
+            <footer class="container mx-auto mt-8 mb-4 pt-8 text-center text-sm">
+                Copyright &copy; 2009-<?=date('Y'); ?> NOLA Interactive, LLC.<br />
+                All Rights Reserved.
+            </footer>
+            </main>
         </div>
     </div>
     <script type="text/javascript" src="/assets/js/highlight.min.js"></script>
