--- a/app/view/inc/nav.phtml
+++ b/app/view/inc/nav.phtml
@@ -1,10 +1,94 @@
             <aside id="sidebar" class="col-left bg-gray-200 p-4 overflow-y-auto">
-                <ul>
-                    <li>Documentation</li>
-                    <li>Getting Started</li>
-                    <li>Installationm</li>
-                    <li>Quick Start</li>
-                    <li>User Guide</li>
-                    <li>Reference</li>
+                <ul class="side-nav">
+                    <li>
+                        <a href="#">Overview</a>
+                        <ul>
+                            <li><a href="#">Introduction</a></li>
+                            <li><a href="#">About</a></li>
+                            <li><a href="#">Community</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#">Installation</a>
+                        <ul class="hidden">
+                            <li><a href="#">Composer</a></li>
+                            <li><a href="#">Requirements</a></li>
+                            <li><a href="#">Recommendations</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#">Getting Started</a>
+                        <ul class="hidden">
+                            <li><a href="#">Applications</a></li>
+                            <li><a href="#">Routing</a></li>
+                            <li><a href="#">Controllers</a></li>
+                            <li><a href="#">Models</a></li>
+                            <li><a href="#">Services</a></li>
+                            <li><a href="#">Events</a></li>
+                            <li><a href="#">Modules</a></li>
+                            <li><a href="#">Popcorn</a></li>
+                            <li><a href="#">Kettle</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#">User Guide
+                        <ul class="hidden">
+                            <li><a href="#">MVC</a></li>
+                            <li><a href="#">Views</a></li>
+                            <li><a href="#">HTTP</a></li>
+                            <li><a href="#">Console</a></li>
+                            <li><a href="#">Databases</a></li>
+                            <li><a href="#">Sessions</a></li>
+                            <li><a href="#">Forms</a></li>
+                            <li><a href="#">Images</a></li>
+                            <li><a href="#">PDFs</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#">Reference</a>
+                        <ul class="hidden">
+                            <li><a href="#">pop-acl</a></li>
+                            <li><a href="#">pop-application</a></li>
+                            <li><a href="#">pop-audit</a></li>
+                            <li><a href="#">pop-auth</a></li>
+                            <li><a href="#">pop-cache</a></li>
+                            <li><a href="#">pop-code</a></li>
+                            <li><a href="#">pop-color</a></li>
+                            <li><a href="#">pop-config</a></li>
+                            <li><a href="#">pop-console</a></li>
+                            <li><a href="#">pop-controller</a></li>
+                            <li><a href="#">pop-cookie</a></li>
+                            <li><a href="#">pop-css</a></li>
+                            <li><a href="#">pop-csv</a></li>
+                            <li><a href="#">pop-db</a></li>
+                            <li><a href="#">pop-debug</a></li>
+                            <li><a href="#">pop-dir</a></li>
+                            <li><a href="#">pop-dom</a></li>
+                            <li><a href="#">pop-event</a></li>
+                            <li><a href="#">pop-filter</a></li>
+                            <li><a href="#">pop-form</a></li>
+                            <li><a href="#">pop-ftp</a></li>
+                            <li><a href="#">pop-http</a></li>
+                            <li><a href="#">pop-i18n</a></li>
+                            <li><a href="#">pop-image</a></li>
+                            <li><a href="#">pop-kettle</a></li>
+                            <li><a href="#">pop-log</a></li>
+                            <li><a href="#">pop-mail</a></li>
+                            <li><a href="#">pop-mime</a></li>
+                            <li><a href="#">pop-module</a></li>
+                            <li><a href="#">pop-nav</a></li>
+                            <li><a href="#">pop-paginator</a></li>
+                            <li><a href="#">pop-pdf</a></li>
+                            <li><a href="#">pop-queue</a></li>
+                            <li><a href="#">pop-router</a></li>
+                            <li><a href="#">pop-service</a></li>
+                            <li><a href="#">pop-session</a></li>
+                            <li><a href="#">pop-storage</a></li>
+                            <li><a href="#">pop-utils</a></li>
+                            <li><a href="#">pop-validator</a></li>
+                            <li><a href="#">pop-view</a></li>
+                            <li><a href="#">popcorn</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </aside>
