--- a/app/view/inc/footer.phtml
+++ b/app/view/inc/footer.phtml
@@ -1,10 +1,11 @@
             <footer class="container mx-auto mt-8 mb-4 pt-8 text-center text-sm">
                 Copyright &copy; 2009-<?=date('Y'); ?> NOLA Interactive, LLC.<br />
-                All Rights Reserved.
+                All Rights Reserved. <a href="https://www.popphp.org/">www.popphp.org</a>
             </footer>
             </main>
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <script type="text/javascript" src="/assets/js/highlight.min.js"></script>
     <script src="/assets/js/app.min.js"></script>
 </body>
