--- a/app/view/inc/header.phtml
+++ b/app/view/inc/header.phtml
@@ -24,7 +24,7 @@
 <body>
     <div class="flex flex-col h-screen">
         <header class="sticky top-0 z-40 w-full p-4 h-16 flex-none bg-white border border-solid border-b border-b-gray-300">
-            <a class="nav-icon hidden float-right p-1 border border-solid border-gray-200 rounded-md" href="#" onclick="toggleSidebar('#sidebar'); return false;">
+            <a class="nav-icon hidden float-right p-1 border border-solid border-gray-200 text-gray-600 hover:text-gray-400 rounded-md" href="#" onclick="toggleSidebar('#sidebar'); return false;">
                 <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
                 </svg>
