--- a/app/view/inc/nav.phtml
+++ b/app/view/inc/nav.phtml
@@ -1,4 +1,4 @@
-            <aside id="sidebar" class="col-left bg-gray-200 p-4 overflow-y-auto">
+            <aside id="sidebar" class="col-left bg-gray-200 pl-8 pr-8 pt-2 pb-2 overflow-y-auto dark:bg-gray-950">
                 <ul class="side-nav">
                     <li>
                         <a href="#">Overview</a>
