--- a/app/view/inc/header.phtml
+++ b/app/view/inc/header.phtml
@@ -23,10 +23,18 @@
 </head>
 <body>
     <div class="flex flex-col h-screen">
-        <header class="sticky top-0 z-40 w-full p-4 h-16 flex-none bg-white border border-solid border-b border-b-gray-300">
-            <a class="nav-icon hidden float-right p-1 border border-solid border-gray-200 text-gray-600 hover:text-gray-400 rounded-md" href="#" onclick="toggleSidebar('#sidebar'); return false;">
+        <header class="sticky top-0 z-40 w-full p-4 h-16 flex-none bg-white border-b border-solid border-b-gray-300 dark:bg-gray-950 dark:text-white dark:border-b dark:border-b-gray-700">
+            <a class="nav-icon hidden float-right p-1 bg-white border border-solid border-gray-200 text-gray-600 hover:text-gray-400 rounded-md dark:bg-gray-700 dark:text-gray-200 dark:border-none" href="#" onclick="toggleSidebar('#sidebar'); return false;">
                 <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+                </svg>
+            </a>
+            <a class="dark-icon float-right p-1 mr-4 text-gray-600 hover:text-gray-400 rounded-md dark:hover:text-gray-100" href="#" onclick="toggleDarkMode(); return false;">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M21.752 15.002A9.718 9.718 0 0118 15.75c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752A9.753 9.753 0 003 11.25C3 16.635 7.365 21 12.75 21a9.753 9.753 0 009.002-5.998z" />
+                </svg>
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="hidden text-gray-400 hover:text-gray-100 w-6 h-6">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M12 3v2.25m6.364.386l-1.591 1.591M21 12h-2.25m-.386 6.364l-1.591-1.591M12 18.75V21m-4.773-4.227l-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0z" />
                 </svg>
             </a>
             <h1><?=$title; ?></h1>
