--- a/app/view/index.phtml
+++ b/app/view/index.phtml
@@ -1,6 +1,6 @@
 <?php include __DIR__ . '/inc/header.phtml'; ?>
 <?php include __DIR__ . '/inc/nav.phtml'; ?>
-            <main class="col-right bg-white overflow-y-auto pl-8 pr-8 pt-4 pb-4">
+            <main class="col-right bg-white overflow-y-auto pl-24 pr-24 pt-12 pb-12 max-[768px]:pl-12 max-[768px]:pr-12 max-[768px]:pt-4 max-[768px]:pb-4 dark:text-gray-300 dark:bg-gray-900">
                 <h2>This is a Header</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Aliquet nibh praesent tristique magna. Pharetra diam sit amet nisl. Morbi tristique senectus et netus et malesuada fames ac. Malesuada fames ac turpis egestas. Id interdum velit laoreet id donec ultrices. Sit amet mauris commodo quis imperdiet massa. Vulputate dignissim suspendisse in est ante in nibh mauris. Id eu nisl nunc mi. Urna duis convallis convallis tellus id interdum velit laoreet id. Diam quam nulla porttitor massa. Id volutpat lacus laoreet non curabitur. Nullam ac tortor vitae purus faucibus ornare suspendisse sed nisi. Nisl rhoncus mattis rhoncus urna. Sed libero enim sed faucibus turpis. Lectus quam id leo in.</p>
                 <h4>This is a Sub-header</h4>
