--- a/app/view/inc/header.phtml
+++ b/app/view/inc/header.phtml
@@ -4,9 +4,7 @@
 
 <head>
 
-    <title>
-        Pop PHP Framework : <?=$title; ?>
-    </title>
+    <title>Pop PHP Framework : <?=$title; ?></title>
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="author" content="Nick Sagona" />
