--- a/app/view/inc/nav.phtml
+++ b/app/view/inc/nav.phtml
@@ -31,7 +31,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#">User Guide
+                        <a href="#">User Guide</a>
                         <ul class="hidden">
                             <li><a href="#">MVC</a></li>
                             <li><a href="#">Views</a></li>
