--- a/app/view/exception.phtml
+++ b/app/view/exception.phtml
@@ -1,4 +1,6 @@
 <?php include __DIR__ . '/inc/header.phtml'; ?>
-<h1 style="color: #f00;"><?=$title;?></h1>
-<p><?=$message; ?></p>
+<?php include __DIR__ . '/inc/nav.phtml'; ?>
+            <main class="col-right bg-white overflow-y-auto pl-24 pr-24 pt-12 pb-12 max-[976px]:pl-12 max-[976px]:pr-12 max-[976px]:pt-4 max-[976px]:pb-4 dark:text-gray-300 dark:bg-gray-900">
+                <h2 class="text-red-500"><?=$title; ?></h2>
+                <p class="pb-96"><?=$message; ?></p>
 <?php include __DIR__ . '/inc/footer.phtml'; ?>
