Work on CSS layout

--- a/app/view/inc/header.phtml
+++ b/app/view/inc/header.phtml
@@ -19,7 +19,7 @@
     <script defer src="/assets/js/app.min.js"></script>
 
 </head>
-<body x-data :class="$store.darkMode.on && 'dark'" x-cloak class="antialiased">
+<body x-data :class="$store.darkMode.on && 'dark'" x-cloak class="text-gray-900 antialiased">
     <div class="flex flex-col h-screen">
         <header class="sticky top-0 z-40 w-full pt-6 pb-6 pl-4 pr-4 h-20 flex-none bg-white border-b border-solid border-b-gray-300 dark:bg-gray-950 dark:text-white dark:border-b dark:border-b-gray-700">
             <a class="nav-icon hidden float-right p-1 bg-white border border-solid border-gray-200 text-gray-600 hover:text-gray-400 rounded-md dark:bg-gray-700 dark:text-gray-200 dark:border-none" href="#" onclick="toggleSidebar('#sidebar'); return false;">
