--- a/app/view/inc/nav.phtml
+++ b/app/view/inc/nav.phtml
@@ -1,6 +1,6 @@
             <aside id="sidebar" class="col-left bg-gray-200 pl-8 pr-8 pt-2 pb-2 overflow-y-auto dark:bg-gray-950">
                 <ul class="side-nav" x-init="setActiveNav();">
-                    <li x-data="{open: true}">
+                    <li x-data="{open: <?=$nav1Active; ?>}">
                         <a href="#" x-on:click="open = !open; $event.preventDefault();">Overview</a>
                         <ul x-show="open" x-transition:enter.duration.200ms x-transition:leave.duration.200ms x-cloak>
                             <li><a href="/overview/introduction">Introduction</a></li>
@@ -8,15 +8,14 @@
                             <li><a href="/overview/community">Community</a></li>
                         </ul>
                     </li>
-                    <li x-data="{open: false}">
+                    <li x-data="{open: <?=$nav2Active; ?>}">
                         <a href="#" x-on:click="open = !open; $event.preventDefault();">Installation</a>
                         <ul x-show="open" x-transition:enter.duration.200ms x-transition:leave.duration.200ms x-cloak>
-                            <li><a href="#">Composer</a></li>
-                            <li><a href="#">Requirements</a></li>
-                            <li><a href="#">Recommendations</a></li>
+                            <li><a href="/installation/composer">Composer</a></li>
+                            <li><a href="/installation/requirements">Requirements</a></li>
                         </ul>
                     </li>
-                    <li x-data="{open: false}">
+                    <li x-data="{open: <?=$nav3Active; ?>}">
                         <a href="#" x-on:click="open = !open; $event.preventDefault();">Getting Started</a>
                         <ul x-show="open" x-transition:enter.duration.200ms x-transition:leave.duration.200ms x-cloak>
                             <li><a href="#">Applications</a></li>
@@ -30,7 +29,7 @@
                             <li><a href="#">Kettle</a></li>
                         </ul>
                     </li>
-                    <li x-data="{open: false}">
+                    <li x-data="{open: <?=$nav4Active; ?>}">
                         <a href="#" x-on:click="open = !open; $event.preventDefault();">User Guide</a>
                         <ul x-show="open" x-transition:enter.duration.200ms x-transition:leave.duration.200ms x-cloak>
                             <li><a href="#">MVC</a></li>
@@ -44,7 +43,7 @@
                             <li><a href="#">PDFs</a></li>
                         </ul>
                     </li>
-                    <li x-data="{open: false}">
+                    <li x-data="{open: <?=$nav5Active; ?>}">
                         <a href="#" x-on:click="open = !open; $event.preventDefault();">Reference</a>
                         <ul x-show="open" x-transition:enter.duration.200ms x-transition:leave.duration.200ms x-cloak>
                             <li><a href="#">pop-acl</a></li>
@@ -90,5 +89,6 @@
                             <li><a href="#">popcorn</a></li>
                         </ul>
                     </li>
+                    <li><a href="http://api.popphp.org/5.0/" target="_blank">API Docs</a></li>
                 </ul>
             </aside>
