--- a/app/resources/css/app.css
+++ b/app/resources/css/app.css
@@ -15,7 +15,7 @@
     padding: 0;
     width: 225px;
     height: 60px;
-    background-image: url(/assets/img/pop-php-logo2.png);
+/*    background-image: url(/assets/img/pop-php-logo2.png);*/
     background-repeat: no-repeat;
     background-position-x: 0;
     background-position-y: 0;
